<resources>
    <string name="app_name">水电管家</string>
    <!-- login-->
    <string name="login">登录</string>
    <string name="immediate_register">立即注册</string>
    <string name="et_hint_input_phone_number">请输入手机号</string>
    <string name="et_hint_input_password">请输入密码</string>
    <string name="tv_forget_password">忘记密码?</string>
    <string name="user_contract">《水电管家用户协议》</string>
    <string name="tv_login_agree">登录/注册说明您已同意</string>
    <!-- phone_verification_login-->
    <string name="phone_verification_login">手机验证登录</string>
    <string name="obtain_verify_code">获取验证码</string>
    <string name="phone_create_account">未注册的手机将自动创建为水电管家账户</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="verification_login">验证并登录</string>
    <string name="qq">QQ</string>
    <string name="we_chat">微信</string>
    <!-- register-->
    <string name="register">注册</string>
    <string name="register_first">1输入手机号</string>
    <string name="register_second">2输入验证码</string>
    <string name="register_third">3设置密码</string>
    <string name="hint_input_password_register">请输入您的手机号</string>
    <string name="next">下一步</string>
    <string name="get_verification">获取验证码</string>
    <string name="agreeable">我已同意并接受</string>
    <string name="resend_verification">点击获取验证码</string>
    <string name="hint_input_verification">请输入手机获取的短信验证码</string>
    <string name="commit_verification">提交验证码</string>
    <string name="set_login_password_hint">请设置登录密码</string>
    <string name="invitation_code_hint">请输入邀请码(选填)</string>
    <string name="password_length">密码长度6&#8211;20字符</string>
    <string name="commit_login">提交并登录</string>
    <string name="setting_password">设置密码</string>
    <!-- forget_password-->
    <string name="forget_pwd">忘记密码</string>
    <string name="refresh_get_verification">重新获取验证码</string>
    <string name="hint_verification">请输入验证码</string>
    <string name="refresh_setting_pwd">重设密码</string>
    <string name="setting_pwd">请重新确认密码</string>


    <!-- home-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="tvLocation">正在定位中&#8230;</string>
    <string name="hydroelectric_manager">水电管家</string>
    <string name="home">首页</string>
    <string name="reservation">马上预约</string>
    <string name="my">个人中心</string>
    <string name="feature_manager">特色管家</string>
    <string name="store_manager">管家商城</string>
    <string name="anniversary_manager">管家包年</string>
    <string name="search">搜索</string>
    <string name="input_address">请输入地址</string>
    <string name="tv_location">定位到当前位置</string>

    <!-- my-->
    <!-- 设置服务时间-->
    <string name="setting_service_time">设置服务时间</string>
    <string name="setting_service_date">请在下面设置服务日期：%s</string>
    <string name="setting_service_dates">请在下面设置服务日期：</string>
    <string name="setting_time_service">请在下面设置服务时间：</string>
    <string name="setting_service_times">请在下面设置服务时间：%s</string>

<!--coupon-->
    <string name="no_coupon">您暂时还没有优惠券</string>
    <!-- reservation-->
    <string name="no_reservation">空空如也，暂时没有预约</string>
<!--service-->
    <string name="no_service">空空如也，暂时没有服务</string>

    <string name="edit_name">编辑姓名</string>
    <string name="hint_edit_name">请编辑姓名</string>
    <string name="name_tv">姓名：</string>
    <string name="tel_phone">确定拨打电话?</string>
    <string name="upload_photo_tv">请上传照片</string>
    <string name="account_balance">账户余额</string>
    <string name="withdraw">提现</string>
    <string name="account_balance_detail">账户余额：</string>
    <string name="retreat">退回</string>
    <string name="apply_date">2016&#8211;04&#8211;01</string>
    <string name="withdraw_account_money">100.00</string>
    <string name="withdraw_money">+100.00</string>
    <string name="audit">正在审核中</string>
    <string name="withdraw_ali_pay">提现到支付宝</string>
    <string name="ali_pay_account">支付宝账户</string>
    <string name="ali_pay_account_edit">支付宝账号/手机号</string>
    <string name="amount_money">金额&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;</string>
    <string name="remark">备注&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;&#x0020;</string>
    <string name="lower_withdraw_money">每笔最低100元</string>
    <string name="edit_remark">20字以内</string>
    <string name="most_withdraw_money">可提现金额</string>
    <string name="commit_apply">提交申请</string>



    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="account_money">%1$s元</string>
    <string name="my_balance">我的余额</string>
    <string name="discount_money">%1$s元</string>
    <string name="discount_coupon">优惠券</string>
    <string name="collection_number">%1$s条</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_reservation">我的预约</string>
    <string name="my_service">我的服务</string>
    <string name="life_service">生活服务</string>
    <string name="address_manage">地址管理</string>
    <string name="customer_hot_line">客服热线</string>
    <string name="hot_line_phone">400&#8211;850&#8211;8888</string>
    <string name="service_address">服务地址</string>
    <string name="add">新增</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="no_always_use_address">您还没有常用地址哦</string>
    <string name="address">地址</string>
    <string name="edit_address_service">编辑服务地址</string>
    <string name="contacts">联&#x0020;&#x0020;系&#x0020;&#x0020;人：</string>
    <string name="hint_contacts">请填写收货人的姓名</string>
    <string name="phone_number">手机号码：</string>
    <string name="hint_receiver_delivery_phone">请填写收获手机号码</string>
    <string name="select_town">选择市区：</string>
    <string name="hint_select_town">请选择省市区县</string>
    <string name="detail_address">详细地址：</string>
    <string name="hint_detail_address">请输入街道、楼号、门牌号等详细信息</string>
    <string name="setting_default_address">设置为默认地址</string>
    <string name="service_name">生活管家清洁包[包月]服务(包含9项服务)</string>
    <string name="service_price">￥398.00/套</string>
    <string name="addition">添加</string>
    <string name="discount_coupon_use_state">优惠券使用说明</string>
    <string name="discount_coupon_money">￥</string>
    <string name="discount_coupon_number">%1$s</string>
    <string name="discount_coupon_use_way">水电维修专用</string>
    <string name="discount_coupon_use_lowest">满%1$s可用</string>
    <string name="discount_coupon_out_date">还有%1$s天过期</string>
    <string name="discount_coupon_validity_date">有效期至：</string>
    <string name="discount_coupon_phone">1881772121</string>
    <string name="discount_coupon_date">2016&#8211;04&#8211;01</string>
    <string name="discount_coupon_online_payment">,App下单使用，在线支付专享</string>
    <string name="exchange_code_discount_coupon">请输入优惠券兑换码</string>
    <string name="password_discount_coupon">请输入优惠券密码</string>
    <string name="my_reservation_maintenance_projects">软管维修</string>
    <string name="my_reservation_evaluation">待评价</string>
    <string name="my_reservation_description_problem">弟弟大赛是多久啊环境和可靠的卡卡的多久啊环境和可靠的卡卡的多久啊环境和可靠的卡卡的多久啊环境和可靠的卡卡的经济</string>
    <string name="my_reservation_time">预约时间：</string>
    <string name="my_reservation_date">2016&#8211;04&#8211;01&#x0020;&#x0020;10:20</string>
    <string name="my_reservation_price">￥85.00</string>
    <string name="my_reservation_evaluation_immediately">立即评价</string>

    <!-- reservation马上预约-->
    <string name="hydroelectricity_service">水电服务</string>
    <string name="electricity_light_path">电灯灯路</string>
    <string name="faucet_fitting">龙头管件</string>
    <string name="bathroom_sanitary">卫浴洁具</string>
    <string name="rush_pipe">管道疏通</string>
    <string name="others">其它</string>
    <string name="feature_service">特色服务</string>
    <string name="anniversary_service">包年服务</string>
    <string name="service_demand">服务需求</string>
    <string name="project">项目</string>
    <string name="plumber">水电工</string>
    <string name="dig_up_clean">开荒保洁</string>
    <string name="formalin_govern">甲醛治理</string>
    <string name="appliance_clean">家电清洗</string>
    <string name="maintain_home">居家保养</string>
    <string name="publication_requirement">发布需求</string>
    <string name="maintain_project">维修项目：</string>
    <string name="select_maintain_project">龙头管件</string>
    <string name="problem_description">问题描述：</string>
    <string name="hint_description_problem">请详细描述问题，维修师傅会更好的服务</string>
    <string name="upload_photo">上传照片</string>
    <string name="please_upload_photo">请上传照片，服务更快捷</string>
    <string name="service_time">服务时间</string>、
    <string name="hint_select_address">请选择地址</string>
    <string name="immediate_pay">立即支付</string>
    <string name="requirement_price">￥80.00</string>
    <string name="order_confirm">订单确认</string>
    <string name="tel">13835356985</string>
    <string name="order_service_address">服务地址：</string>
    <string name="order_discount_coupon">优&#x0020;&#x0020;惠&#x0020;&#x0020;券：</string>
    <string name="not_use">未使用</string>
    <string name="actually_pay_account">实付金额：</string>
    <string name="payment_method">支付方式</string>
    <string name="ali_pay_payment">支付宝支付</string>
    <string name="we_chat_payment">微信支付</string>
    <string name="payment">去支付</string>
    <string name="order_detail">订单详情</string>
    <string name="total">总计</string>
    <string name="discount">优惠</string>
    <string name="actual_payment">实付</string>
    <string name="service_information">服务信息</string>
    <string name="order_information">订单信息</string>
    <string name="order_number">订单号码：</string>
    <string name="order_time">订单时间：</string>
    <string name="complain_advice">投诉建议</string>
    <string name="discount_price">￥0</string>
    <string name="maintain_type">维修类型</string>
    <string name="select_service_type">请选择服务类型</string>
    <string name="select_service_time">请选择服务时间</string>
    <string name="order_evaluated">已评价</string>
    <string name="order_commit">订单已提交</string>
    <string name="order_commit_remark">请耐心等待水电工接单</string>
    <string name="order_payment">支付成功</string>
    <string name="order_receive">水电工已接单</string>
    <string name="order_receive_remark">水电工稍后会与您联系</string>
    <string name="material_cost_payment">材料费支付成功</string>
    <string name="order_maintain">已维修</string>
    <string name="order_maintain_remark">请确认服务情况</string>
    <string name="order_finished">交易完成</string>
    <string name="order_time_item">02&#8211;02&#x0020;&#x0020;11:22</string>
    <string name="remark_content_order">管家电话:</string>
    <string name="maintain_phone">18817772486</string>
    <string name="waite_receive_order">等待接单</string>
    <string name="five_minute">05:00</string>
    <string name="contact_customer_service">5分钟未接单，请联系客服中心处理</string>
    <string name="cancel_order">取消订单</string>
    <string name="family_type">家庭版</string>
    <string name="business">商用版</string>
    <string name="staff_name">水电工</string>
    <string name="five_star">五星</string>
    <string name="distance_staff">6.9km</string>
    <string name="take_order_times">接单1199次</string>
    <string name="filter">筛选</string>
    <string name="service_list">服务列表</string>
    <string name="professional_title">职称</string>
    <string name="potter_star">匠星</string>
    <string name="gender">性别</string>
    <string name="unlimited">不限</string>
    <string name="clear">清空</string>
    <string name="certain">确定</string>
    <string name="primary_staff">初级水电管家</string>
    <string name="intermediate_staff">中级水电管家</string>
    <string name="pentagram_staff">五星水电管家</string>
    <string name="buy_number">已有880人购买</string>
    <string name="combo_list">套餐列表</string>

</resources>
