<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/manager_height"
    android:layout_margin="@dimen/margin_distance"
    android:background="@drawable/ic_discount_coupon_background"
   >
    <TextView
        android:id="@id/itemMoneySymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discount_coupon_money"
        android:layout_marginTop="@dimen/head_image_top_distance"
        android:layout_marginLeft="@dimen/left_distance"
        android:layout_marginStart="@dimen/left_distance"
        style="@style/text_nor"
        android:textColor="@color/red"/>
    <TextView
        android:id="@id/itemDiscountAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/itemMoneySymbol"
        android:layout_toRightOf="@id/itemMoneySymbol"
        android:textColor="@color/red"
        style="@style/text_large"
        android:layout_alignBottom="@id/itemMoneySymbol"
        android:text="@string/discount_coupon_number"/>
    <TextView
        android:id="@id/itemLowestUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_top_distance"
        android:text="@string/discount_coupon_use_lowest"
        android:layout_below="@id/itemMoneySymbol"
        android:layout_alignLeft="@id/itemMoneySymbol"
        style="@style/text_nor_gray"
        android:layout_alignStart="@id/itemMoneySymbol"/>
    <TextView
        android:id="@id/itemDiscountUseWay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_big"
        android:textColor="@color/black"
        android:text="@string/discount_coupon_use_way"
        android:layout_toRightOf="@id/itemDiscountAmount"
        android:layout_toEndOf="@id/itemDiscountAmount"
        android:layout_alignBottom="@id/itemMoneySymbol"
        android:layout_marginLeft="@dimen/large_left_distance"
        android:layout_marginStart="@dimen/large_left_distance"/>
    <TextView
        android:id="@id/itemDiscountPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemDiscountUseWay"
        style="@style/text_nor_gray"
        android:layout_marginTop="@dimen/smaller_top_distance"
        android:layout_alignStart="@id/itemDiscountUseWay"
        android:layout_alignLeft="@id/itemDiscountUseWay"
        android:text="@string/discount_coupon_phone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/itemDiscountPhone"
        android:layout_toRightOf="@id/itemDiscountPhone"
        android:text="@string/discount_coupon_online_payment"
        android:layout_alignBottom="@id/itemDiscountPhone"
        style="@style/text_nor_gray"/>
    <View
        android:id="@id/itemLine"
       android:layout_below="@id/itemLowestUse"
        android:layout_marginTop="@dimen/middle_top_distance"
        style="@style/divider"/>
    <TextView
        android:id="@id/itemDiscountOutDate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/itemLine"
        android:text="@string/discount_coupon_out_date"
        style="@style/text_nor"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/small_left_distance"
        android:layout_marginStart="@dimen/small_left_distance"
        android:textColor="@color/red"
        />
    <TextView
        android:id="@id/itemDiscountDate"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/itemLine"
        android:gravity="center_vertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        style="@style/text_nor_gray"
        android:text="@string/discount_coupon_date"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/discount_coupon_validity_date"
        android:layout_below="@id/itemLine"
        android:layout_toLeftOf="@id/itemDiscountDate"
        android:layout_toStartOf="@id/itemDiscountDate"/>



</RelativeLayout>