<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@drawable/color_gradient_theme">
    <ImageView
        android:id="@id/backLeftWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_arrow_left_white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/withdraw_ali_pay"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        style="@style/text_big"
        android:layout_toEndOf="@id/backLeftWhite"
        android:layout_toRightOf="@id/backLeftWhite"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/white"
        android:layout_marginTop="@dimen/middle_top_distance">
        <TextView
            android:id="@id/aliPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_distance"
            android:layout_marginLeft="@dimen/left_distance"
            android:text="@string/ali_pay_account"
            android:layout_centerVertical="true"
            style="@style/text_nor"/>
        <EditText
            android:id="@id/aliPayAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ali_pay_account_edit"
            android:background="@null"
            style="@style/text_nor"
            android:layout_marginStart="@dimen/left_distance"
            android:layout_marginLeft="@dimen/left_distance"
            android:layout_toEndOf="@id/aliPay"
            android:layout_toRightOf="@id/aliPay"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/right_distance"
            android:layout_marginEnd="@dimen/right_distance"
            android:src="@drawable/ali_pay_icon"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/white"
        android:layout_marginTop="@dimen/middle_top_distance">
        <TextView
            android:id="@id/aliPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_distance"
            android:layout_marginLeft="@dimen/left_distance"
            android:text="@string/amount_money"
            android:layout_centerVertical="true"
            style="@style/text_nor"/>
        <EditText
            android:id="@id/lowWithdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lower_withdraw_money"
            android:background="@null"
            style="@style/text_nor"
            android:layout_marginStart="@dimen/left_distance"
            android:layout_marginLeft="@dimen/left_distance"
            android:layout_toEndOf="@id/aliPay"
            android:layout_toRightOf="@id/aliPay"
            android:layout_centerVertical="true"/>

    </RelativeLayout>
    <View
       style="@style/divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/white">
        <TextView
            android:id="@id/aliPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/left_distance"
            android:layout_marginLeft="@dimen/left_distance"
            android:text="@string/remark"
            android:layout_centerVertical="true"
            style="@style/text_nor"/>
        <EditText
            android:id="@id/limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_remark"
            android:background="@null"
            style="@style/text_nor"
            android:layout_marginStart="@dimen/left_distance"
            android:layout_marginLeft="@dimen/left_distance"
            android:layout_toEndOf="@id/aliPay"
            android:layout_toRightOf="@id/aliPay"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_top_distance">
        <TextView
            android:id="@id/mostMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/most_withdraw_money"
           style="@style/text_nor"
            android:layout_marginStart="@dimen/left_distance"
            android:layout_marginLeft="@dimen/left_distance"
            android:textColor="@color/red"/>
        <TextView
            android:id="@id/itemMoneySymbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_coupon_money"
            android:layout_toRightOf="@id/mostMoney"
            android:textColor="@color/red"
            android:layout_marginStart="@dimen/left_distance"
            android:layout_marginLeft="@dimen/left_distance"
            style="@style/text_nor"
            android:layout_toEndOf="@id/mostMoney"/>
        <TextView
            android:id="@id/accountMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            style="@style/text_nor"
            android:layout_toRightOf="@id/itemMoneySymbol"
            android:layout_toEndOf="@id/itemMoneySymbol"
            android:text="@string/withdraw_account_money"/>
    </RelativeLayout>
    <Button
        android:id="@id/commitApply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/margin_button_distance"
        android:text="@string/commit_apply"
        android:textColor="@color/white"
        style="@style/text_nor"
        android:background="@drawable/button_orange" />
</LinearLayout>