<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:visibility="gone"
    android:layout_height="@dimen/liner_layout_height_large"
    android:background="@color/white"
    android:layout_alignParentBottom="true">
    <TextView
        android:id="@id/waiteOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/large_left_distance"
        android:layout_marginLeft="@dimen/large_left_distance"
        android:layout_marginTop="@dimen/middle_top_distance"
        style="@style/text_nor"
        android:text="@string/waite_receive_order"/>
    <TextView
        android:id="@id/orderTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_nor"
        android:textColor="@color/blue"
        android:layout_toRightOf="@id/waiteOrder"
        android:layout_toEndOf="@id/waiteOrder"
        android:layout_alignBottom="@id/waiteOrder"
        android:layout_marginLeft="@dimen/left_distance"
        android:layout_marginStart="@dimen/left_distance"
        android:text="@string/five_minute"/>
    <TextView
        android:id="@id/contactCusSer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/waiteOrder"
        android:layout_alignLeft="@id/waiteOrder"
        android:layout_alignStart="@id/waiteOrder"
        android:paddingTop="@dimen/padding_top"
        style="@style/text_small"
        android:text="@string/contact_customer_service"/>
    <TextView
        android:id="@id/customerHotLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_small"
        android:textColor="@color/blue"
        android:layout_below="@id/waiteOrder"
        android:paddingTop="@dimen/padding_top"
        android:layout_toEndOf="@id/contactCusSer"
        android:layout_toRightOf="@id/contactCusSer"
        android:text="@string/hot_line_phone"/>
    <Button
        android:id="@id/cancelOrder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/margin_button_distance"
        android:layout_marginStart="@dimen/margin_button_distance"
        android:layout_marginRight="@dimen/margin_button_distance"
        android:layout_marginEnd="@dimen/margin_button_distance"
        android:layout_marginTop="@dimen/margin_button_distance"
        android:layout_marginBottom="5dp"
        android:text="@string/cancel_order"
        style="@style/text_nor"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_white" />
</RelativeLayout>