<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_marginBottom="@dimen/divider_bottom"
    android:layout_height="?android:actionBarSize">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/left_distance"
        android:layout_marginLeft="@dimen/left_distance"
        android:orientation="vertical">
    <TextView
        android:id="@id/withdrawStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retreat"
        style="@style/text_nor"
        />
    <TextView
        android:id="@id/applyDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_nor_gray"
        android:text="@string/apply_date"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/right_distance"
        android:layout_marginRight="@dimen/right_distance"
        android:orientation="vertical">
        <TextView
            android:id="@id/withdrawMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/withdraw_money"
            style="@style/text_nor"
          />
        <TextView
            android:id="@id/auditStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_small"
            android:visibility="gone"
            android:textColor="@color/orange"
            android:text="@string/audit"/>
    </LinearLayout>
</RelativeLayout>
