<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height"
    android:layout_marginTop="@dimen/margin_distance">
    <TextView
        android:id="@id/maintenanceProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_distance"
        android:layout_marginStart="@dimen/left_distance"
        style="@style/text_big"
        android:textColor="@color/black"
        android:text="@string/my_reservation_maintenance_projects"
        android:drawableRight="@drawable/ic_black_right"
        android:drawableEnd="@drawable/ic_black_right"
        android:gravity="center"
        />
    <TextView
        android:id="@id/itemReservationEvaluation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        style="@style/text_big"
        android:textColor="@color/black"
        android:padding="@dimen/small_padding_drawable"
        android:layout_marginEnd="@dimen/right_distance"
        android:layout_marginRight="@dimen/right_distance"
        android:text="@string/my_reservation_evaluation"
        android:layout_alignBottom="@id/maintenanceProjects"/>
    <View
        android:id="@id/itemLine"
       android:layout_below="@id/maintenanceProjects"
        style="@style/divider"/>
    <TextView
        android:id="@id/descriptionProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemLine"
        android:text="@string/my_reservation_description_problem"
        style="@style/text_nor_gray"
        android:lineSpacingExtra="@dimen/line_spacing"
        android:layout_alignLeft="@id/maintenanceProjects"
        android:layout_alignStart="@id/maintenanceProjects"
        android:paddingTop="@dimen/text_padding"
        android:paddingBottom="@dimen/text_padding"
        android:maxLines="2"
        android:ellipsize="end"
        android:layout_marginEnd="@dimen/right_distance"
        android:layout_marginRight="@dimen/right_distance"/>
    <TextView
        android:id="@id/reservationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionProblem"
        android:text="@string/my_reservation_time"
        android:paddingTop="@dimen/text_padding"
        android:paddingBottom="@dimen/text_padding"
        style="@style/text_nor_gray"
        android:layout_alignLeft="@id/maintenanceProjects"
        android:layout_alignStart="@id/maintenanceProjects"/>
    <TextView
        android:id="@id/reservationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_reservation_date"
        android:paddingBottom="@dimen/text_padding"
        android:layout_alignBottom="@id/reservationTime"
        android:layout_toRightOf="@id/reservationTime"
        android:layout_toEndOf="@id/reservationTime"/>

    <View
        android:id="@id/itemLines"
        android:layout_below="@id/reservationDate"
        style="@style/divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/itemLines"
        >
    <TextView
        android:id="@id/maintenancePrice"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/my_reservation_price"
        style="@style/text_nor"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/left_distance"
        android:layout_marginStart="@dimen/left_distance"
        android:textColor="@color/red"/>
    <Button
        android:id="@id/btEvaluation"
        android:layout_width="@dimen/button_width"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_height="@dimen/button_height_small"
        android:layout_marginEnd="@dimen/right_distance"
        android:background="@drawable/button_red"
        android:textColor="@color/white"
        style="@style/text_nor"
        android:layout_centerVertical="true"
        android:text="@string/my_reservation_evaluation_immediately"
        android:layout_marginRight="@dimen/right_distance"/>
    </RelativeLayout>
</RelativeLayout>