<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@id/nameDialog"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center"
        style="@style/text_large"
        android:textColor="@color/white"
        android:text="@string/edit_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/small_top_distance"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/text_nor"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/right_distance_middle"
            android:layout_marginLeft="@dimen/right_distance_middle"
            android:text="@string/name_tv"/>

        <EditText
            android:id="@id/etNameDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/right_distance_middle"
            android:layout_marginRight="@dimen/right_distance_middle"
            android:hint="@string/hint_edit_name"
            style="@style/text_nor"/>
    </LinearLayout>

</LinearLayout>